重绘 162/210 的快速排序图

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -479,9 +479,8 @@ hand}
 排序时, 也用到了这三种类型的数据). 正如你所看到的那样, 随着元素个数的增加,
 同元素序列的操作次数比另外两种序列的操作次数增长得快.
 
-% TODO 应该用 LaTeX 画图, 而不是截图
 \begin{center}
-    \includegraphics[scale=0.7]{images/quicksort.png}
+    \includegraphics{images/quicksort.eps}
 \end{center}
 
 \begin{exercise}
