重绘 166/210 的堆排序图

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -758,9 +758,9 @@ J. W. J. Williams 和 R. W. Floyd 在 60 年代早期提出.
 测试, 下面这张图显示了测试结果, 可以看到, \verb'hsort' 面对相同元素序列
 时, 性能优于快速排序.
 \marginpar{166}
-% TODO 应该用 LaTeX 画图, 而不是截图
+
 \begin{center}
-    \includegraphics[scale=0.7]{images/heap_sort.png}
+    \includegraphics{images/heap_sort.eps}
 \end{center}
 
 接下来的这张图显示了本节所讨论的三种排序算法, 在面对随机输入数据时的性能
