重绘 166/210 的排序比较图

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -765,9 +765,9 @@ J. W. J. Williams 和 R. W. Floyd 在 60 年代早期提出.
 
 接下来的这张图显示了本节所讨论的三种排序算法, 在面对随机输入数据时的性能
 表现.
-% TODO 应该用 LaTeX 画图, 而不是截图
+
 \begin{center}
-    \includegraphics[scale=0.7]{images/sort_cmp.png}
+    \includegraphics{images/sort_cmp.eps}
 \end{center}
 
 前面曾经说过, \texttt{isort} 对随机数据进行排序的时间复杂度是二次的, 而
