减小 136/210 交通死亡人数图的行间距

--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -305,7 +305,7 @@
     \url{https://en.wikipedia.org/wiki/List_of_motor_vehicle_deaths_in_U.S._by_year}
  --- 译者注}:
 {\small
-\begin{awkcode}
+\begin{lstlisting}[basicstyle = \ttfamily, lineskip = -2pt]
       |------------------------------------------------------------------------|
       |                                                                        |
       |                                                  *  **                 |
@@ -330,7 +330,7 @@
       |---------|----------|---------|----------|---------|----------|---------|
                1930       1940      1950       1960      1970       1980        
                         Annual Traffic Deaths, USA, 1925-1984                   
-\end{awkcode}
+\end{lstlisting}
 }
 
 \texttt{graph} 的处理程序分为两个阶段. 主循环读取并解析图的规范说明, 
