--- a/latex_src/preamble.tex
+++ b/latex_src/preamble.tex
@@ -35,6 +35,7 @@
 \usepackage{multicol}
 % 表格单元格内换行
 \usepackage{makecell}
+\usepackage{listings}
 
 % 脚注编号带圈
 \renewcommand\thefootnote{\ding{\numexpr171+\value{footnote}}}
