183/210 表格: 首行首列的单元格居中排列

--- a/latex_src/epilog.tex
+++ b/latex_src/epilog.tex
@@ -116,7 +116,8 @@ Awk 并没有内建的计时工具, 因此在本地环境中, 哪些操作属于
 \begin{tabular}{l|c|c|c|c|c}
     \hline
     \hline
-    程序 & \makecell{AT\&T \\ 6300+} & \makecell{DEC VAX \\ 11-750} &
+    \multicolumn{1}{c|}{程序} & \makecell{AT\&T \\ 6300+} &
+    \makecell{DEC VAX \\ 11-750} &
     \makecell{AT\&T \\ 3B2/600} & \makecell{SUN-3} &
     \makecell{DEC VAX \\ 8550} \\
     \hline
