Remove a footnote in page 190/210

--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -296,11 +296,10 @@
         \texttt{sqrt(}\textit{x}\texttt{)} \> 方根 \\
 
         \texttt{srand(}\textit{x}\texttt{)} \> 设置随机数种子, 如果省略
-        \textit{x}, 则默认使用当天的时间\footnotemark
+        \textit{x}, 则默认使用当天的时间
     \end{tabbing}
 \end{quote}
-\footnotetext{原文是: set new seed for random number generator;
-    uses time of day if no \textit{x} given}
+
 \subsubsection{表示式运算符 (按优先级递增排列)}
 表达式可以通过下列运算符进行组合:
 \begin{quote}
