删除 86/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/data_processing.tex
+++ b/latex_src/data_processing.tex
@@ -992,9 +992,8 @@ awk 程序, 就可以把原来的程序应用到多行记录上. 第 1 个程序
 
 
 \marginpar{86}
-在某些应用中, 数据可能包含更复杂的结构\footnote{原文为 In some applications
-    data may have more structure than can be captured by a sequence of
-unformatted lines.}, 例如, 地址可能含有国家名称, 也可能不包括街道地址.
+某些应用的数据更加结构化, 这些数据没办法表示成一系列非结构化的文本, 例如,
+地址可能含有国家名称, 也可能不包括街道地址.
 
 处理结构化数据的一种方法是为记录的每一个字段加上一个名字或关键词, 例如,
 我们有可能如此组织一本支票薄:
