删除 184/210 的一个脚法, 并调整原来的翻译

--- a/latex_src/epilog.tex
+++ b/latex_src/epilog.tex
@@ -166,8 +166,7 @@ Awk 并没有内建的计时工具, 因此在本地环境中, 哪些操作属于
 
 最后一个办法是用其他编程语言重写程序. 基本原则是把 awk 中比较有用的内建
 特性用子例程替换掉, 除此之外, 尽量让新程序和原程序在结构上保持一致.
-不要试图完全模仿 awk 的工作方式, 相反, 尽量充分利用手中已有的程序.
-\footnote{原文是 Instead provide just enough for the problem at hand.}
+不要试图完全模仿 awk 的工作方式, 只要能解决问题就足够了.
 比较有用的练习是写一个小型函数库, 函数库提供了字段分割, 关联数组,
 和正则表达式匹配, 在某些不支持动态字符串的语言中 (比如 C 语言), 你可能
 还需要一些能够方便地分配和释放字符串的子例程. 有了这些库函数, 把 awk 
