删除 185/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/epilog.tex
+++ b/latex_src/epilog.tex
@@ -198,15 +198,10 @@ awk 难逢敌手. 隐式输入循环和 \patact 范式简化了 (而且经常是
 存储功能和灵活的下标. 正则表达式提供了描述文本的统一表示法. 默认的初
 始化操作和声明的缺少缩减了程序的规模.
 
-我们没有预料到的是,  在许多不太常见的应用中也用到了 awk. 比如, ``非编程
-工作'' 到 ``编程工作'' 的转换是一个渐变的过程: 由于缺少传统语言 (比如 
+我们没有料到的是, 在许多非常规应用中也用到了 awk. 比如 ``非编程'' 到
+``编程'' 的转换是一个渐变的过程, 由于缺少传统语言 (比如
 C 和 Pascal) 所具有的语法包袱, 所以 awk 学习起来非常简单, 它甚至是相
-当一部分人的第一门编程语言.\footnote{原文是 What we did not anticipate were
-    the less conventional applications. For example, the transition from
-    ``not programming'' to ``programming'' is quite gradual: the absence of
-    the syntatic baggage of conventional languages like C or Pascal makes
-    awk easy enough to learn that it has been the first language for a
-surprising number of people.}
+当一部分人的第一门编程语言.
 
 在 1985 年加入的特性, 尤其是自定义函数的支持, 催生出了许多未曾预料到的
 应用, 比如小型数据库系统和小语言编译器. 在许多种情况下, awk 只是用
