删除 116/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -330,9 +330,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
 
 \begin{exercise}
     写一套语法规则, 该规则能够生成关于某学科的, 听起来貌似合理的文本 ---
-    学科可以是商业, 政治, 或计算机.\footnote{原文为 Write a grammar for
-        generating plausible-sounding text from a field that appeals to you
-    -- business, politics, and computing are all good possibilities.}
+    学科可以是商业, 政治, 计算机或其他你感兴趣的领域.
 \end{exercise}
 
 \begin{exercise}
