删除 120/210 的两个脚注

--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -601,9 +601,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
 \label{subsec:maintaining_cross_reference_in_manuscripts}
 
 文档准备的一个常见问题是为条目创建一个一致的名字或编号集合, 条目可以是
-文献引用, 图表, 示例等.\footnote{原文为 A common problem in document
-    preparation is creating a consistent set of names or numbers for items
-like bibliographic citations, figures, tables, examples, and so on.}
+文献引用, 图片, 表格等.
 某些文本格式化程序可以帮助我们完成这件工作, 但是大多数情况下还是需要自己来
 完成. 我们的下一个例子是对交叉引用进行编号, 该技术对于技术文档编写来说
 特别有用.
@@ -611,10 +609,7 @@ like bibliographic citations, figures, tables, examples, and so on.}
 编写文档时, 作者为不同的条目创建并使用不同的符号名, 这些条目之后会被
 交叉引用. 因为名字是符号化的, 所以条目可以被添加, 删除, 重新编排, 而不用
 修改已存在的名字. 本节所提出的交叉引用技术是使用两个程序共同创建一个文本,
-文本中的符号名被适当的编号
-所替代\footnote{原文为 Two programs create the version in which the
-symbolic names are replaced by suitable numbers. 原文显得有点突兀: 不经
-过渡就直接提到 ``Two programs ...''}.
+文本中的符号名被适当的编号所替代.
 这里有一个示例文档, 文档中包含了两个文献引用和一张图的符号名:
 \marginpar{121}
 \begin{awkcode}
