删除 122/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -726,10 +726,9 @@ girl runs very very quickly'' 这样的句子可以用下面的语法来描述:
 \subsection{制作 KWIC 索引}
 \label{subsec:making_a_kwic_index}
 
-一个 KWIC (Keyword-In-Context) 索引指的是一种显示了其所在行的上下文内的每
-一个单词的索引\footnote{原文为 A Keyword-In-Context or KWIC index is an
-index that shows each word in the context of the line it is found in.}.
-在本质上, 它所提供的信息等价于重要语汇索引 (concordance), 虽然形式上有点
+KWIC (Keyword-In-Context) 索引把一行内的每个单词都显示在单词所在行的上下文
+语境中, 在本质上, 它所提供的信息等价于 \cterm{重要语汇索引} (concordance),
+虽然形式上有点
 \marginpar{123}
 不同. 考虑下面三个句子:
 \begin{awkcode}
