删除 130/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -1147,11 +1147,9 @@ actual data.}
 \label{sec:processing_words_summary}
 
 Awk 处理文本就像 C 或 Pascal 处理数字那样轻松 --- 自动管理存储, 内建运算
-符与内建函数提供了许多必需的功能. 结果是 awk 擅长于原型构造, 有时候即使
-是对产品化的使用来说, 原型也已足够\footnote{原文为 As a result, awk is
-    usually good for prototyping, and sometimes it is quite adequate for
-production use.}. 索引程序就是一个很好的例子 --- 我们使用该程序的另一个
-版本为本书制作索引.
+符与内建函数提供了许多必需的功能. 因此 awk 很适合构造原型, 有时候即使
+用在产品化上, 原型也已足够, 索引程序就是一个很好的例子 --- 我们使用该程
+序的另一个版本为本书制作索引.
 
 \subsection*{参考资料}
 我们的测试程序以 Unix 的测试程序为原型构造而来, 后者最初由 Doug McIlroy
