删除 128/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -1036,9 +1036,7 @@ comparison}'' 生成 ``\texttt{comparison, string}''. 旋转操作与 KWIC
     controlflow statements      control-flow statements 48
     ...
 \end{awkcode}
-前面几行应该能够阐明排序键与实际数据之间的区别.\footnote{原文为 The first
-    few lines should clarify the distinction between the sort key and the
-actual data.}
+读者应该可以从前面几行分辨出排序键和实际的数据.
 
 第二个排序命令对输入按照字母顺序排序, 同之前的一样, 选项 \texttt{-f}
 表示合并大小写字母, \texttt{-d} 表示按照字典序排序.
