删除 130/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -1133,12 +1133,9 @@ comparison}'' 生成 ``\texttt{comparison, string}''. 旋转操作与 KWIC
 \end{exercise}
 
 \begin{exercise}
-    构造一个准备单词与短语列表的工具程序, 利用该程序来自动创建索引.
-    在促成索引字与主题方面, \texttt{wordfreq} 所生成的单词频率列表
-    表现如何?\footnote{Attack the problem of creating an index
-        automatically by building tools that prepare lists of words,
-        phrases, etc. How well does the list of word frequencies produced
-        by \texttt{wordfreq} suggest index terms or topics?}
+    构造一个准备单词和短语列表的工具程序, 利用该程序来自动创建索引.
+    是否可以根据 \texttt{wordfreq} 生成的单词频率列表, 来决定哪些单词可
+    以成为索引项?
 \end{exercise}
 
 \section{小结}
