删除 102/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -715,7 +715,7 @@ for each form letter that is generated.}. 例如, 下面的文本使用了参数
 得多. 另一方面, 当我们往数据库添加数据时, 必须小心修改所有的相关文件, 
 否则会带来一致性问题.
 
-根据前面的讨论\footnote{原文为 Up to this point}, 我们的数据库由一个单独
+假设我们的数据库由一个单独
 的文件 \filename{countries} 组成, 文件的每一行都包括四个字段, 字段的名字
 分别是 \verb'country', \verb'area', \verb'population', 以及
 \verb'continent'. 现在我们打算在数据库中新增一个文件 \filename{capitals},
