把 pushback 翻译成 "推回"

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -911,9 +911,9 @@ for each form letter that is generated.}. 例如, 下面的文本使用了参数
 \texttt{unget} 将它放回. 我们把提取第一个属性值的代码局限在函数
 \texttt{prefix} 中, 这样以后改起来也比较方便.
 
-读者应该注意一下函数 \texttt{getone} 与 \texttt{unget} 如何撤回一个输入行.
+读者应该注意一下函数 \texttt{getone} 与 \texttt{unget} 如何推回一个输入行.
 在读取新行之前, \texttt{getone} 检查是否已经有一行被读取并由
-\texttt{unget} 存放在某个变量中, 如果是, 则返回该行. 撤回是解决过早遭遇
+\texttt{unget} 存放在某个变量中, 如果是, 则返回该行. 推回是解决过早遭遇
 问题 (在一次操作中, 读取了过多的输入\footnote{原文为 reading one too 
 many inputs.}) 的方法之一.
 在本章早些时候出现 的 control-break 程序中, 我们把处理操作延迟了, 而在这里,
@@ -1199,7 +1199,7 @@ Chapter 3}
 
 为了生成表格, ``分而治之'' 通常是最好的方法: 在一个程序中准备数据, 如果 
 必要的话就对数据排序, 然后用第二个程序对数据进行格式化. Control break 可
-以通过向前看, 或者撤回输入 (通常是比较优雅的方式) 来处理. (有时候也可以
+以通过向前看, 或者推回输入 (通常是比较优雅的方式) 来处理. (有时候也可以
 通过管道来完成这些工作, 虽然我们在这章没有用到.) 为了处理格式的细节, 相对
 于手工计算字符个数, 一种更好的替代方案是用某些程序来完成机械化的部分.
 
