删除 99/210 的一个脚注, 并调整原来的翻译

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -527,11 +527,8 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 
 \begin{exercise}
     增强 \verb'table' 的功能, 增强后的 \verb'table' 允许输入数据中出现一个
-    格式说明行序列, 这个序列说明了每一列如何格式化随后的数据.
-    \footnote{原文为 
-        Enhance \texttt{table} to permit a sequence of specification lines
-        that tell how the subsequent data is to be formatted in each column.
-    } (\texttt{tbl} 就是这样控制输出格式的)
+    格式说明行序列, 这个序列说明了如何格式化每一列随后的数据.
+    (\texttt{tbl} 就是这样控制输出格式的)
 \end{exercise}
 
 \section{打包的查询与报表}
