删除 100/210 的一个脚注

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -628,9 +628,7 @@ Awk 也可以用于生成格式信函, 生成时
 \end{tikzpicture}
 \end{center}
 格式信函的文本内容存放在文件 \filename{letter.text} 中,文本中包含了许多参
-数, 只需要通过参数替换, 就可以生成不同内容的信函\footnote{原文为 The text
-    contains parameters that will be replaced by a set of parameter values
-for each form letter that is generated.}. 例如, 下面的文本使用了参数 
+数, 只需要通过参数替换, 就可以生成不同内容的信函. 例如, 下面的文本使用了参数
 \verb'#1' 到 \verb'#4', 这些参数分别表示国家名称, 人口, 面积, 以及人口密度:
 \marginpar{101}
 \begin{awkcode}
