删除 110/210 的一个脚注

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -1176,12 +1176,7 @@ awk 程序.
     \label{exer:multiline_query}
 	提供一种输入并编辑多行查询的方式. 只要对 \texttt{qawk} 作些许修改,
 	就可以把多行查询收集起来. 一种可选的方案是调用你喜欢的编辑器,
-	另一种方式是用 awk 实现一个简单的编辑器.\footnote{原文为 Provide a
-		way to enter and edit multiline queries. Multiline queries
-		can be collected with minimal changes to \texttt{qawk}. One
-		possibility for editing is a way to invoke your favorite
-		text editor; another is to write a very simple editor in
-	awk itself.}
+	另一种方式是用 awk 实现一个简单的编辑器.
 \end{exercise}
 
 \section{小结}
