Remove a footnote in page 145/210

--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -786,9 +786,7 @@ Forth 和 Postscript) 和口袋计算器都把它作为基本表示法来使用.
 语言拥有大量不同优先级的运算符, 嵌套结构 (比如括号与 if-then-else 语句),
 以及其他复杂的构造, 所有的这些都要求更强大的解析技术, 而不仅仅是字段
 分割与正则表达式匹配. 使用 awk 处理高级语言是可能的, 只要有一个完全
-成熟的解析程序即可, 而解析程序可以用任何一种语言来写\footnote{原文为
-    It is possible to process such languages in awk by
-writing a full-fledged parser, as one would in any language}.
+成熟的解析程序即可, 而解析程序可以用任何一种语言来写.
 本节将开发一个对数学表达式进行求值的程序, 表达式使用人们通常所熟悉的中
 缀表示法表示. 以该程序为先导, 我们会在下一节开发一个更加复杂的
 解析程序.
