删除 110/210 的一个脚注, 并调用原来的翻译
ad hoc 是拉丁文, 意思是:
    仅为某一目的 (而做或安排) (的); 特别 (的)

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -1182,9 +1182,9 @@ awk 程序.
 \section{小结}
 \label{sec:reports_and_databases_summary}
 在这一章, 我们主要学习了如何使用 awk, 按照结构化的方式来访问和打印信息,
-与第 \ref{chap:data_processing} 章的 \textit{ad hoc} 使用方式形成对照.
-\footnote{原文为 in contrast to the more typical \textit{ad hoc} uses of
-Chapter 3}
+正好和 \ref{chap:data_processing} 章形成对照, 因为第
+\ref{chap:data_processing} 章使用 awk 的方式都是专门针对某一具体的问题,
+这种情况更加典型.
 
 为了生成表格, ``分而治之'' 通常是最好的方法: 在一个程序中准备数据, 如果 
 必要的话就对数据排序, 然后用第二个程序对数据进行格式化. Control break 可
