调整页面上间距

--- a/latex_src/preamble.tex
+++ b/latex_src/preamble.tex
@@ -50,6 +50,7 @@
     margin=1cm,
     marginparsep = 0.5cm,
     marginparwidth=1cm,
+    top = 2cm,
     bottom = 2cm,
     outer = 2.5cm,
     inner = 2.5cm
