纠正某些表格的排版错误

--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -85,7 +85,7 @@
     \begin{tabular}{c|l|l}
         \hline
         \hline
-        操作码          & 指令    &
+        \multicolumn{1}{c|}{操作码}          & \multicolumn{1}{c|}{指令}    &
         \multicolumn{1}{c}{意义}  \\
         \hline
         \texttt{01}     & \texttt{get}  & 从输入读取一个数, 并存放到累
