--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -142,7 +142,7 @@ Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 
 
 如果我们想要一个更加精美的输出, 其只打印大洲名字一次, 那么我们可以使用
 程序 \verb'form2':
-\begin{verbatim}
+\begin{awkcode}
     # form2 - format countries by continent, pop. den.
 
     BEGIN { FS = ":"
@@ -158,13 +158,13 @@ Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 
             printf("%-15s %-10s %7d %10d %10.1f\n",
                 $1, $2, $3, $4, $5)
           }
-\end{verbatim}
+\end{awkcode}
 执行程序的命令行是 
-\begin{verbatim}
+\begin{awkcode}
     awk -f prep1 countries | awk -f form2
-\end{verbatim}
+\end{awkcode}
 程序的输出是
-\begin{verbatim}
+\begin{awkcode}
     CONTINENT       COUNTRY    POPULATION    AREA    POP. DEN.
 
     Asia            Japan          120        144      833.3
@@ -181,7 +181,7 @@ Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 
                     Canada          25       3852        6.5
 
     South America   Brazil         134       3286       40.8
-\end{verbatim}
+\end{awkcode}
 
 格式化程序 \verb'form2' 是一个 ``control-break'' 程序, 变量 \verb'prev' 
 跟踪大洲的名字, 只有当大洲名字变化时才会打印出来. 在下一节, 我们将会看到 
@@ -929,7 +929,7 @@ Awk 也可以用于生成格式信函, 生成时
     进行连接, 并可以按照任意的顺序, 有选择地输出某些字段.
 \end{exercise}
 
-\subsection{\texttt{relfile}}
+\subsection{\textbf{\texttt{relfile}}}
 \marginpar{106}
 为了回答关于分散在多张表中的数据库的问题, 我们必须知道每张表中包含什么内容,
 我们把这些信息存储在名为 \texttt{relfile} 的文件中 (``rel'' 指的是
@@ -1042,7 +1042,7 @@ relation}), 它是一张包含了所有属性的表, 是 \texttt{relfile} 的最
     { area += $area }; END { print area/NR }
 \end{awkcode}
 
-\subsection{\texttt{qawk}, \textit{q}-to-awk 翻译器}
+\subsection{\textbf{\texttt{qawk}}, \textit{q}-to-awk 翻译器}
 \label{subsec:qawk_a_q_to_awk_translator}
 
 我们用 \texttt{qawk} 的实现来结束本章, 它把 \textit{q} 查询转换成等价的
