增加脚注与正文最后一行的间距
在某些情况下, 脚注会与正文的最后一行重叠, 增加间距后可防止出现这
一现象.

--- a/latex_src/preamble.tex
+++ b/latex_src/preamble.tex
@@ -57,8 +57,10 @@
     marginparsep = 0.5cm,
     marginparwidth=1cm,
     top = 2cm,
-    bottom = 2cm,
+    bottom = 2.5cm,
     outer = 2.5cm,
+    footnotesep = 0.8cm,
+    footskip=1cm,
     inner = 3.0cm
 }
 
