--- a/latex_src/awk.tex
+++ b/latex_src/awk.tex
@@ -9,6 +9,9 @@
 
 \frontmatter
 \pdfbookmark[0]{封面}{title}
+\begin{titlepage}
+    \includepdf[width=\paperwidth]{./images/cover.pdf}
+\end{titlepage}
 \maketitle
 \pdfbookmark[0]{目录}{contents}
 \tableofcontents
