--- a/latex_src/preamble.tex
+++ b/latex_src/preamble.tex
@@ -37,6 +37,8 @@
 \usepackage{makecell}
 \usepackage{listings}
 
+\usepackage{pdfpages}
+
 % 脚注编号带圈
 \renewcommand\thefootnote{\ding{\numexpr171+\value{footnote}}}
 
