补上 "输入文件" 和 "程序格式" 这两个目录项

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -28,9 +28,7 @@
 展开对动作的讨论. 剩下的小节包括函数定义, 输出, 输入, 以及 awk 调用其
 他程序的方式. 大部分小节都包含对主要性质的总结.
 
-\pdfbookmark[1]{输入文件}{the_input_file_countries}
-\subsection*{输入文件\filename{countries}}
-\label{subsec:the_input_file_countries}
+\pseudosubsec{输入文件 \filename{countries}}
 
 作为本章许多 awk 程序的输入数据, 我们将使用文件 \filename{countries}. 每一
 行都包括一个国家的名字, 面积 (以千平方英里为单位), 人口 (以百万为单位), 以
@@ -57,9 +55,7 @@
 在这一章的剩下部分里, 如果没有显式给出输入数据, 默认将 \filename{countries}
 作为输入.
 
-\pdfbookmark[1]{程序格式}{program_format}
-\subsection*{程序格式}
-\label{subsec:program_format}
+\pseudosubsec{程序格式}
 
 \patact 语句, 以及动作内的语句通常用换行符分隔, 但是若干条语句也可
 以出现在同
