--- a/latex_src/preamble.tex
+++ b/latex_src/preamble.tex
@@ -119,6 +119,15 @@
 % subsection unnumbered
 \CTEXsetup[number={}]{subsection}
 
+% Looks like subsection's format, reference CTex manual ctex.pdf
+\newcommand\pseudosubsec[1]{
+    \vspace{3.25ex plus 1ex minus .2ex}
+    \noindent\large\textbf{\phantom{占}#1}
+    \vspace{1.5ex plus .2ex}
+    \phantomsection
+    \addcontentsline{toc}{section}{\protect\numberline{}#1}
+}
+
 % word that shows frequently
 \newcommand\awk{\texttt{awk}}
 \newcommand\print{\texttt{print}}
