--- a/latex_src/preamble.tex
+++ b/latex_src/preamble.tex
@@ -140,10 +140,10 @@
 % Looks like subsection's format, reference CTex manual ctex.pdf
 \newcommand\pseudosubsec[1]{
     \vspace{3.25ex plus 1ex minus .2ex}
-    \noindent\large\textbf{\phantom{占}#1}
+    \noindent{\CJKfamily{heiti}{\phantom{占}#1}}
     \vspace{1.5ex plus .2ex}
     \phantomsection
-    \addcontentsline{toc}{subsection}{\protect\numberline{}#1}
+    \addcontentsline{toc}{subsection}{#1}
 }
 
 % word that shows frequently
