更新 123/210 的一个脚注

--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -737,8 +737,8 @@ KWIC (Keyword-In-Context) 索引把一行内的每个单词都显示在单词所
     Every man has a price.
 \end{awkcode}
 这三个句子的 KWIC 索引是\footnote{这个索引是在我的系统上运行
-    \texttt{kwic} 得到的, 某几行的出现顺序与英文原版不太一致,
-我也不知道是什么原因 (我甚至没搞懂 KWIC 究竟是什么) --- 译者注}:
+\texttt{kwic} 得到的, 可能是因为 \texttt{sort} 版本不同, 某几行的出现顺序与
+英文原版不太一致 --- 译者注}:
 \begin{awkcode}
                         Nature  abhors a vacuum.
                                 All's well that ends well.
