更新 97/210 的一个脚注

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -421,8 +421,7 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 复杂的程序的确很有野心, 但不妨让我们从一个小程序开始: 这个程序以左对齐的
 方式在列中打印文本条目, 其列宽度为所在列的最大值; 如果是数值则右对齐, 但是 
 数值所占的域相对于本列最宽的项居中. 如果给定头部与输入文件
-\filename{countries}, 程序的输出是\footnote{\filename{countries} 原来没有
-头部, 需事先加上 --- 译者注}:
+\filename{countries}, 程序的输出是\footnote{头部需要额外提供 --- 译者注}:
 \begin{awkcode}
     COUNTRY   AREA   POPULATION   CONTINENT    
     USSR      8649       275      Asia         
