--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -2166,7 +2166,7 @@ iii, 2, 21, 34, 53, 187
 
 \hangindent=2pc \hangafter=1 syntax error (语法错误) 4
 
-\hangindent=2pc \hangafter=1 system function (系统函数) 59, 64
+\hangindent=2pc \hangafter=1 \verb'system' function (函数 \verb'system') 59, 64
 
 \hangindent=2pc \hangafter=1 tab character, \verb'\t' (制表符) 15, 24, 31
 
