单独设置 "符号" 的字体

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -10,7 +10,7 @@
 \setlength\parindent{0pt}
 \small
 
-\pdfbookmark[2]{符号}{symbol}\medskip\textbf{\large{符号}}
+\pdfbookmark[2]{符号}{symbol}\medskip{\CJKfamily{heiti}\large{符号}}
 
 \hangindent=2pc \hangafter=1 \verb'&&' AND operator (``与'' 运算符)10, 31, 37, 158
 
