修正一个翻译错误, 并添加一条脚注

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -1337,9 +1337,12 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
     0           0a
     1e500       1.0e500
 \end{awkcode}
-在前三对值中, 第二个字段都不是一个有效的数值.
-最后一对值也会按照字符串来比较,
-这是因为如果将它们转换成数值的话, 其值大得无法在机器上表示.
+在前三对值中, 第二个字段都不是一个有效的数值. 对 \verb'1e500' 和
+\verb'1.0e500' 来说, 如果它们的值大到机器无法表示, 就会被当成字符串进行比较
+\footnote{把 \texttt{1e500} 与 \texttt{1.0e500} 转换成数值时如果发生溢出,
+不同版本的 awk 处理方式也不同, gawk-4.0.1 返回一个特殊值, 此时
+\texttt{1e500} 与 \texttt{1.0e500} 的数值是相等的, 而 mawk-1.3.3 则报错退出.
+--- 译者注}.
 
 输出语句
 \begin{awkcode}
