破折号由 3 个减号组成, 不是 4 个

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -85,7 +85,7 @@
 
 在这本书里我们用到了若干种编程风格, 之所以这样做, 一方面是为了比较不同
 风格之间的差异, 另一方面是为了避免程序占用过多的行. 对于比较短小的程序
----- 就像本章中出现过的那些例子 ----
+--- 就像本章中出现过的那些例子 ---
 格式并不是非常重要, 但是一致性与可读性对于大程序
 的管理非常有帮助.
 
