--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -12,13 +12,13 @@
 确需要花点
 心思, 但是其实扫描步骤也是挺复杂的. 第二部分讨论如何从多个相关的文件中
 收集数据, 我们考虑用一种比较通用的方法来解决这个问题, 基本思想是把文件组
-看成是关系数据库, 这样做的好处是字段可以用名字来标识, 而不是数字.
+看成是关系数据库, 这样做的好处是可以用名字 (而不是数字) 标识字段.
 
 \section{报表生成}
 \label{sec:generating_reports}
 
 Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 我们将使用一个
-三步骤过程来生成报表: 准备, 排序, 格式化. 准备步骤包括选择数据, 可能的话
+三步骤的过程来生成报表: 准备, 排序, 格式化. 准备步骤包括选择数据, 可能的话
 还会对数据进行一些运算, 进而得到期望的信息; 如果我们想让数据按照某种特定
 的顺序排列, 就必须使用排序步骤, 排序操作可以通过将准备阶段的输出输送给系统
 的排序命令来完成; 格式化操作由第 2 个 awk 程序完成, 它根据已排序的数据
@@ -339,10 +339,10 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 解决这种 ``我们已经走得太远了 (We've gone too far)'' 问题是 control-break
 编程的经典例子. 解决办法是在打印之前检查每一个输入行, 判断是否需要为
 前一个数据组生成合计信息, 同样的检查也出现在了 \END 中, 所以计算工作最好
-用一个单独的函数来完成. 如果层次只有一层, 那么 control-break 是一种非常简单
+用一个单独的函数完成. 如果层次只有一层, 那么 control-break 是一种非常简单
 且有效的方法, 但是当层次加深时, 事情就会变得很糟.
 
-正如上面的程序所呈现得那样, 复杂的格式化工作可以通过多个 awk 程序的组合来
+正如上面的程序所呈现得那样, 复杂的格式化工作可以通过组合多个 awk 程序
 完成, 但是为了打印出适当的行, 我们必须精心地计算字符并编写 \printf 语句,
 这种工作其实非常乏味, 尤其是其中的某些部分需要进行修改时.
 
@@ -645,7 +645,7 @@ Awk 也可以用于生成格式信函, 生成时
 \begin{awkcode}
     Canada:25:3.852:6.5
 \end{awkcode}
-输出的的格式信函是:
+输出的格式信函是:
 \begin{awkcode}
     Subject: Demographic Information About Canada
     From: AWK Demographics, Inc.
@@ -678,12 +678,12 @@ Awk 也可以用于生成格式信函, 生成时
     }
 \end{awkcode}
 
-\verb'form.gen' 的 \BEGIN 从文件 \filename{letter.text} 中读取格式信函的
+\verb'form.gen' 的 \BEGIN 从文件 \filename{letter.text} 读取格式信函的
 文本, 并存放到数组 \verb'form' 中, 剩下的工作是读取输入参数, 调用 
 \verb'gsub' 将文本中的 \verb'#'\textit{n} 替换成对应的参数, 被修改的只 
 是存储在数组 \verb'form' 中的信函副本, 文件 \filename{letter.text} 的内容
-并没有发生改变. 注意程序是如何通过字符串拼接来生成 \verb'gsub' 的第一个
-参数的.
+并没有发生改变. 注意程序是如何通过字符串拼接生成 \verb'gsub' 的第一个
+参数.
 \marginpar{102}
 
 \section{关系数据库系统}
@@ -696,7 +696,7 @@ Awk 也可以用于生成格式信函, 生成时
 
 这个系统通过以下三种方式将 awk 扩展成一个数据库语言:
 \begin{itemize}
-    \item 字段通过名字来引用, 而不是数字.
+    \item 通过名字引用字段 (而不是数字).
     \item 数据库可以分散在多个文件中, 而不是限定在一个文件上.
     \item 可以交互性地生成一个查询序列.
 \end{itemize}
@@ -787,15 +787,15 @@ Awk 也可以用于生成格式信函, 生成时
 
 我们实现连接运算的方法是根据它们的公共属性进行排序, 如果两张表的某一行的
 公共属性值相同, 那就把它们合并起来, 就像上面这张表显示的那样. 为了处理
-涉及到多张表的查询, 我们会先将表格作连接, 然后再对连接后的表作查询, 也就 
+涉及到多张表的查询, 我们会先将表格做连接, 然后再对连接后的表作查询, 也就
 是说, 如果有必要的话, 我们会创建一个临时文件.
 \marginpar{104}
 为了响应查询:
 \begin{awkcode}
     $continent ~ /Asia/ { print $country, $population, $capital }
 \end{awkcode}
-我们将 表 \verb'countries' 与 表 \verb'capitals'  作连接, 再将查询应用到
-连接结果上, 通常来说, 完成这些操作最关键的地方在于将哪些表作连接.
+我们将 表 \verb'countries' 与 表 \verb'capitals'  做连接, 再将查询应用到
+连接结果上, 通常来说, 完成这些操作最关键的地方在于将哪些表做连接.
 
 实际的连接操作可以通过 Unix 命令 \texttt{join} 来完成, 但是如果系统上
 没有该命令, 可以用这里提供的一个 用 awk 实现的简易版本. 它将两个文件按照
@@ -827,7 +827,7 @@ Awk 也可以用于生成格式信函, 生成时
 \end{center}
 
 \vspace{1em}
-作连接后得到
+做连接后得到
 \vspace{1em}
 
 \begin{center}
