--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -262,7 +262,7 @@
 \section{绘图语言}
 \label{sec:a_language_for_drawing_graphs}
 
-利用字段分割操作, 很容易就可以对我们自己定义的汇编语言作词法和语法分析,
+利用字段分割操作, 很容易就可以对我们自己定义的汇编语言进行词法和语法分析,
 这种简易性对一些高级语言来说同样成立. 我们的下一个例子是 \texttt{graph} 
 的语言处理程序, \texttt{graph} 是一种用来画数据坐标图的原型语言. 输入
 是一张图的规范说明, 规范说明的每一行都表示一个数据点, 或坐标轴的标签
@@ -658,8 +658,8 @@ Jan Lukasiewicz 发明的). 中缀表达式
     1 2 + 3 4 - * 5 /
 \end{awkcode}
 逆波兰式不需要括号 --- 如果提前知道运算符的操作数个数, 那么表达式就不会
-有歧义. 逆波兰式非常适合用栈来处理, 由于这个特点, 许多编程语言 (包括
-Forth 和 Postscript) 和口袋计算器都把它作为基本表示法来使用.
+有歧义. 逆波兰式非常适合用栈处理, 由于这个特点, 许多编程语言 (包括
+Forth 和 Postscript) 和便捷计算器都把它作为基本表示法来使用.
 
 我们的第一个计算器只能用来计算采用逆波兰式表示法表示的数学表达式,
 所有的运算符与操作数都用空格分开. 如果某个字段是操作数, 就把它入栈;
